deploy: 0b2775f75cbab7cad260d0e3c2d1ff3be93fd120

--- a/franske-courses/current/itc-2300/lab-asterisk-provvmsip.html
+++ b/franske-courses/current/itc-2300/lab-asterisk-provvmsip.html
@@ -669,7 +669,7 @@ You may need to restart the Asterisk software on your VM in order to get the MWI
 <p>Since we will be manually provisioning the phone using the web interface open a web browser on a PC attached to your internal network and browse to the IP address of the new phone. Login with the username <strong>admin</strong> and password <strong>789</strong></p>
 </li>
 <li>
-<p>Edit your <code><strong>pjsip.conf</strong></code> file as required to create a new transport, line, authentication, and AoR section to use on the phone at extension xx03. See the <a href="#lab-asterisk-pjsipconf.adoc" class="xref unresolved">sample pjsip.conf file</a> for some hints.</p>
+<p>Edit your <code><strong>pjsip.conf</strong></code> file as required to create a new transport, line, authentication, and AoR section to use on the phone at extension xx03. See the <a href="lab-asterisk-pjsipconf" class="xref page">sample pjsip.conf file</a> for some hints.</p>
 <div class="openblock">
 <div class="content">
 <div class="admonitionblock note">
@@ -749,7 +749,7 @@ Make sure to get the current one for Asterisk Version 16. If you get one for a d
 <p>Get two Digium D60 phones. Do NOT connect them to the switch yet.</p>
 </li>
 <li>
-<p>Create a basic <code>res_digium_phone.conf</code> file for your phone with the correct MAC addresses and settingss for a xx04 and xx05 extension. See the <a href="#lab-asterisk-resdigiumconf.adoc" class="xref unresolved">sample res_digium_phone.conf file</a> for some hints.</p>
+<p>Create a basic <code>res_digium_phone.conf</code> file for your phone with the correct MAC addresses and settingss for a xx04 and xx05 extension. See the <a href="lab-asterisk-resdigiumconf" class="xref page">sample res_digium_phone.conf file</a> for some hints.</p>
 </li>
 <li>
 <p>Create the required global entries in your PJSIP file for DPMA configuration use</p>
@@ -788,7 +788,7 @@ Make sure to get the current one for Asterisk Version 16. If you get one for a d
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-10 11:52:31 -0500<br>
+<p>Document Build Time: 2022-10-10 11:57:52 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
