--- a/franske-courses/current/itc-2300/assignments.html
+++ b/franske-courses/current/itc-2300/assignments.html
@@ -314,7 +314,7 @@ If you have not done lab reports in one of Dr. Franske&#8217;s classes before, o
 <div class="sect3">
 <h4 id="_voip_gui_asterisk_configuration_lab"><a class="anchor" href="#_voip_gui_asterisk_configuration_lab"></a>VoIP GUI Asterisk Configuration Lab</h4>
 <div class="paragraph">
-<p>Find instructions for the <a href="lab-asterisk-guiconfig" class="xref page">vmWare vSphere vCenter Server Installation Lab here</a>.</p>
+<p>Find instructions for the <a href="lab-asterisk-guiconfig" class="xref page">VoIP GUI Asterisk Configuration Lab here</a>.</p>
 </div>
 </div>
 </div>
@@ -344,23 +344,7 @@ In this lab activity you will, amongst other things download and install the Ope
 </div>
 </li>
 <li>
-<p>Complete the Programming Fundamentals Module from the <a href="https://developer.cisco.com/learning/tracks/devnet-beginner">DevNet Beginner</a> track</p>
-<div class="openblock">
-<div class="content">
-<div class="admonitionblock note">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-note" title="Note"></i>
-</td>
-<td class="content">
-In Step 2 of the "A Brief Introduction to Git" lab you are told you should have already downloaded a Git repository or you should follow the link at the top with instructions for setting up your workstation. Follow that link and see the section titled <strong>Using Git to Copy Code and Setting Up the Local Environment</strong>. You should clone and use the Data Center Infrastructure: <a href="https://github.com/CiscoDevNet/dciv2-code" class="bare">https://github.com/CiscoDevNet/dciv2-code</a> repository.
-</td>
-</tr>
-</table>
-</div>
-</div>
-</div>
+<p>Complete the <a href="https://developer.cisco.com/learning/tracks/Coding-APIs-v0/Coding-APIs-Fundamentals-v0/">Coding &amp; APIs - Fundamentals Module</a></p>
 </li>
 </ul>
 </div>
@@ -370,41 +354,10 @@ In Step 2 of the "A Brief Introduction to Git" lab you are told you should have 
 <div class="ulist">
 <ul>
 <li>
-<p>Complete the REST API Fundamentals Module from the <a href="https://developer.cisco.com/learning/tracks/devnet-beginner">DevNet Beginner</a> track</p>
+<p>Complete the <a href="https://developer.cisco.com/learning/tracks/Coding-APIs-v0/Coding-APIs-TIF-v0/">Coding &amp; APIs Taking It Further Module</a></p>
 </li>
 <li>
-<p>Complete the Network Programmability Module from the <a href="https://developer.cisco.com/learning/tracks/devnet-beginner">DevNet Beginner</a> track</p>
-<div class="openblock">
-<div class="content">
-<div class="admonitionblock note">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-note" title="Note"></i>
-</td>
-<td class="content">
-On page 2 of the "Cisco DNA Center Platform - Authentication" lab and in some future labs you may receive an error about SSL certificates when running code. Because the Cisco DNAC has a self-signed certificate you will need to change Python Requests function calls from things like: &lt;code&gt;requests.post(url, auth=HTTPBasicAuth(DNAC_USER, DNAC_PASSWORD))&lt;/code&gt; to things like &lt;code&gt;requests.post(url, auth=HTTPBasicAuth(DNAC_USER, DNAC_PASSWORD), verify=False)&lt;/code&gt; by setting the verify flag to false you can tell the Python requests library to ignore SSL certificate verification.
-</td>
-</tr>
-</table>
-</div>
-</div>
-</div>
-<div class="admonitionblock note">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-note" title="Note"></i>
-</td>
-<td class="content">
-In the "End to End Visibility and Assurance with Path Trace and Cisco DNA Center Platform" lab you should re-check the "How To Setup Your Own Computer" link at the top of the page. There is a new GitHub repo to clone which contains the path_trace.py file. Also, we don&#8217;t expect you to be able to write the entire path_trace.py program by yourself at this point. Instead, you should reference that file while reading through the lab&#8217;s explanation of some of the functions so you can see (and hopefully understand) how the program works and what sorts of information are being pulled from the API when you execute the program. You can also try using Postman to make the same API requests and get the same data that you&#8217;re getting though Python.
-</td>
-</tr>
-</table>
-</div>
-</li>
-</ul>
-</div>
+<p>Complete the <a href="https://developer.cisco.com/learning/tracks/netprog-eng/dnac-rest-apis/">Cisco DNA Center REST APIs Module</a> from the Network Programmability for Network Engineers track</p>
 <div class="openblock">
 <div class="content">
 <div class="admonitionblock note">
@@ -421,13 +374,22 @@ If you want to see what the GUI interface for Cisco DNA Center looks like you ca
 </div>
 </div>
 </div>
+</li>
+</ul>
+</div>
 </div>
 <div class="sect3">
 <h4 id="_model_driven_network_programmability_and_ios_xe_lab"><a class="anchor" href="#_model_driven_network_programmability_and_ios_xe_lab"></a>Model Driven Network Programmability and IOS XE Lab</h4>
 <div class="ulist">
 <ul>
 <li>
-<p>Complete all modules in the <a href="https://developer.cisco.com/learning/tracks/iosxe-programmability">IOS XE Programmability</a> track</p>
+<p>Complete the <a href="https://developer.cisco.com/learning/tracks/netprog-eng/intro-device-level-interfaces/">Introduction to Model Driven Programmability Module</a> from the Network Programmability for Network Engineers track</p>
+</li>
+<li>
+<p>Complete the <a href="https://developer.cisco.com/learning/tracks/iosxr-programmability/iosxr-cli-automation/">IOS XR CLI Automation Module</a> from the IOS XR Programmability track</p>
+</li>
+<li>
+<p>Complete the <a href="https://developer.cisco.com/learning/tracks/iosxr-programmability/iosxr-streaming-telemetry/">IOS XR Streaming Telemetry Module</a> from the IOS XR Programmability track</p>
 <div class="openblock">
 <div class="content">
 <div class="admonitionblock note">
@@ -437,7 +399,7 @@ If you want to see what the GUI interface for Cisco DNA Center looks like you ca
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-The SSH instructions in the "Exploring IOS XE YANG Data Models with NETCONF" lab are designed for use on an *NIX based system so they will work best with a Linux computer/VM, a Mac, or in the Windows Subsystem for Linux (WSL).
+Skip the "Creating your first c++ Telemetry Collector" lab
 </td>
 </tr>
 </table>
@@ -453,13 +415,26 @@ The SSH instructions in the "Exploring IOS XE YANG Data Models with NETCONF" lab
 <div class="ulist">
 <ul>
 <li>
-<p>Complete all modules in the <a href="https://developer.cisco.com/learning/modules/sdx-ansible-intro">Introduction to Ansible</a> track</p>
+<p>Complete the <a href="https://developer.cisco.com/learning/tracks/programming-dna/intro-ansible-iosxe/">Introduction to Ansible for IOS XE Configuration Management Module</a></p>
 </li>
 <li>
-<p>Complete the "Introduction to Configuration Management" and "Introduction to Ansible" modules in the <a href="https://developer.cisco.com/learning/modules/intro-ansible-iosxe">Introduction to Ansible for IOS XE Configuration Management</a> track</p>
-</li>
-<li>
-<p>Complete the <a href="https://developer.cisco.com/learning/modules/industrial-netdevops/iot-industrial-netdevops-ansible/step/1">"Managing IoT Harware with Ansible" module</a>.</p>
+<p>Complete the <a href="https://developer.cisco.com/learning/tracks/IOT-Edge-v0/IOT-Edge-TIF-v0/iot-industrial-netdevops-ansible/overview/">Getting Started with Ansible on Cisco IoT Hardware lab</a> in the IOT &amp; Edge Computing-Taking it Further module.</p>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Just do the Getting Started with Ansible on Cisco IoT Hardware lab from this module
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
 </li>
 </ul>
 </div>
@@ -647,7 +622,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-10 11:57:51 -0500<br>
+<p>Document Build Time: 2022-10-14 18:36:44 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
