deploy: d66e73e89aab994c506d095d16aedd2e34cfbd65

--- a/franske-courses/current/itc-2300/assignments.html
+++ b/franske-courses/current/itc-2300/assignments.html
@@ -293,6 +293,22 @@ If you have not done lab reports in one of Dr. Franske&#8217;s classes before, o
 </div>
 <div class="sect2">
 <h3 id="_voice_over_ip_voip_labs"><a class="anchor" href="#_voice_over_ip_voip_labs"></a>Voice over IP (VoIP) Labs</h3>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+If you need additional time to complete these labs you may need to work in the B143 lab instead of our normal B144 lab. In that case be sure to read the <a href="lab-asterisk-b143" class="xref page">B143 lab modification addendum</a> which explains changes you need to make to the lab setup to make things work in B143.
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
 <div class="sect3">
 <h4 id="_introduction_to_voip_with_asterisk_lab"><a class="anchor" href="#_introduction_to_voip_with_asterisk_lab"></a>Introduction to VoIP with Asterisk Lab</h4>
 <div class="paragraph">
@@ -622,7 +638,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-14 18:44:03 -0500<br>
+<p>Document Build Time: 2022-10-19 18:03:44 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
