deploy: 507e36467037cb08f5513c6860818aa5dbf2d573

--- a/franske-courses/current/itc-2300/lab-asterisk-b143.html
+++ b/franske-courses/current/itc-2300/lab-asterisk-b143.html
@@ -274,16 +274,34 @@ It is not possible to do labs using the T1 connections in the B143 lab because t
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>The B143 lab uses Cisco 1941 routers instead of Cisco 2811 routers.
-.* These routers are newer, but less powerful. Most notably instead of FastEthernet interfaces the 1941 routers have GigabitEthernet interfaces so Fa0/0 becomes Gi0/0 and Fa0/1 becomes Gi0/1. The 1941 routers in B143 also do not have voice T1 capabilitities so T1 labs can not be completed in B143.</p>
+<p>The B143 lab uses Cisco 1941 routers instead of Cisco 2811 routers.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>These routers are newer, but less powerful. Most notably instead of FastEthernet interfaces the 1941 routers have GigabitEthernet interfaces so Fa0/0 becomes Gi0/0 and Fa0/1 becomes Gi0/1. The 1941 routers in B143 also do not have voice T1 capabilitities so T1 labs can not be completed in B143.</p>
+</li>
+</ul>
+</div>
 </li>
 <li>
-<p>Not all switches in B143 support Power over Ethernet (PoE) which provides power to your VoIP phones. Only pods 3, 6, and 7 have PoE switches.
-.* You will see these pods have 4 switches instead of 3. The 4th switch is a PoE switch, be sure to use the PoE switch for your phones.</p>
+<p>Not all switches in B143 support Power over Ethernet (PoE) which provides power to your VoIP phones. Only pods 3, 6, and 7 have PoE switches.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>You will see these pods have 4 switches instead of 3. The 4th switch is a PoE switch, be sure to use the PoE switch for your phones.</p>
+</li>
+</ul>
+</div>
 </li>
 <li>
-<p>You will need to power on your pod equipment by using the power switch located above the top router on each pod.
-.* Remember to erase your configurations and power off your pod equipment when you are done with the lab.</p>
+<p>You will need to power on your pod equipment by using the power switch located above the top router on each pod.</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Remember to erase your configurations and power off your pod equipment when you are done with the lab.</p>
+</li>
+</ul>
+</div>
 </li>
 </ol>
 </div>
@@ -404,7 +422,7 @@ There are no changes needed to your Asterisk server IP addresses or extension nu
 <div class="content">
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-19 18:03:44 -0500<br>
+<p>Document Build Time: 2022-10-19 18:09:59 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
