--- a/franske-courses/current/itc-2300/lab-asterisk-pjsipconf.html
+++ b/franske-courses/current/itc-2300/lab-asterisk-pjsipconf.html
@@ -260,7 +260,7 @@
 </div>
 </div>
 <div class="sect1">
-<h2 id="_example_minimal_sccp_conf_file_changes"><a class="anchor" href="#_example_minimal_sccp_conf_file_changes"></a>Example Minimal sccp.conf File Changes</h2>
+<h2 id="_example_minimal_pjsip_conf_file_changes"><a class="anchor" href="#_example_minimal_pjsip_conf_file_changes"></a>Example Minimal pjsip.conf File Changes</h2>
 <div class="sectionbody">
 <div class="listingblock">
 <div class="content">
@@ -488,7 +488,7 @@ match=172.17.219.2 ; All calls from the ITSP will come from this IP address</pre
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-19 18:26:30 -0500<br>
+<p>Document Build Time: 2022-10-19 19:17:57 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
