deploy: 68619029637b090aff59b28aa5e887fe5b7079fc

--- a/franske-courses/current/itc-2300/lab-asterisk-b143.html
+++ b/franske-courses/current/itc-2300/lab-asterisk-b143.html
@@ -238,6 +238,8 @@
 </aside>
 <article class="doc">
 <h1 class="page">VoIP Lab Addendum for B143 Lab</h1>
+<div id="preamble">
+<div class="sectionbody">
 <div class="openblock">
 <div class="content">
 <div class="admonitionblock important">
@@ -254,6 +256,8 @@ This document outlines changes you will need to make if you are working on VoIP 
 </div>
 </div>
 </div>
+<div class="openblock">
+<div class="content">
 <div class="admonitionblock note">
 <table>
 <tr>
@@ -266,11 +270,13 @@ It is not possible to do labs using the T1 connections in the B143 lab because t
 </tr>
 </table>
 </div>
-<div class="openblock">
-<div class="content">
-<div class="paragraph">
-<p>== General Pod Differences in B143</p>
 </div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_general_pod_differences_in_b143"><a class="anchor" href="#_general_pod_differences_in_b143"></a>General Pod Differences in B143</h2>
+<div class="sectionbody">
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -305,9 +311,11 @@ It is not possible to do labs using the T1 connections in the B143 lab because t
 </li>
 </ol>
 </div>
-<div class="paragraph">
-<p>== IP Addressing &amp; Phone Extensions</p>
 </div>
+</div>
+<div class="sect1">
+<h2 id="_ip_addressing_phone_extensions"><a class="anchor" href="#_ip_addressing_phone_extensions"></a>IP Addressing &amp; Phone Extensions</h2>
+<div class="sectionbody">
 <div class="paragraph">
 <p>In the B143 lab you will need to adjust the IP address of the Router 0/0 interface. Instead of 172.17.144.xx/24 you will use 172.17.143.xx/24</p>
 </div>
@@ -404,8 +412,8 @@ It is not possible to do labs using the T1 connections in the B143 lab because t
 </tr>
 </tbody>
 </table>
-</div>
-</div>
+<div class="openblock">
+<div class="content">
 <div class="admonitionblock note">
 <table>
 <tr>
@@ -418,11 +426,11 @@ There are no changes needed to your Asterisk server IP addresses or extension nu
 </tr>
 </table>
 </div>
-<div class="openblock">
-<div class="content">
+</div>
+</div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-19 19:17:57 -0500<br>
+<p>Document Build Time: 2022-10-19 19:42:17 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
