deploy: cb46b0de6d6f8e6713dd404e0f16e8bb3668a176

--- a/franske-courses/current/itc-2300/lab-asterisk-t1pstn.html
+++ b/franske-courses/current/itc-2300/lab-asterisk-t1pstn.html
@@ -692,6 +692,11 @@ You will want to think about all the different types of numbers someone could ca
 </div>
 <div class="openblock">
 <div class="content">
+<div class="paragraph">
+<p>+</p>
+</div>
+</div>
+</div>
 <div class="admonitionblock note">
 <table>
 <tr>
@@ -704,8 +709,8 @@ Most states now require phone systems to allow people to dial 911 directly, with
 </tr>
 </table>
 </div>
-</div>
-</div>
+<div class="openblock">
+<div class="content">
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -751,8 +756,11 @@ Most states now require phone systems to allow people to dial 911 directly, with
 </li>
 <li>
 <p>Find another pod who has calling out to the PSTN working over the ITSP and try placing calls from each pod to the other pod to verify incoming PSTN calls are working.</p>
-<div class="openblock">
-<div class="content">
+</li>
+</ol>
+</div>
+</div>
+</div>
 <div class="admonitionblock important">
 <table>
 <tr>
@@ -765,16 +773,11 @@ In our lab the simulated SIP and T1 PSTN are separate PSTN networks and you cann
 </tr>
 </table>
 </div>
+<div class="openblock">
+<div class="content">
+<div class="paragraph">
+<p>== Cleanup</p>
 </div>
-</div>
-</li>
-</ol>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_cleanup"><a class="anchor" href="#_cleanup"></a>Cleanup</h2>
-<div class="sectionbody">
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -790,10 +793,12 @@ In our lab the simulated SIP and T1 PSTN are separate PSTN networks and you cann
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-19 19:42:17 -0500<br>
+<p>Document Build Time: 2022-10-25 15:30:14 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
+</div>
+</div>
 </div>
 </div>
 </div>
