deploy: 355ac0867a075e39a46568e93558711361dea04f

--- a/franske-courses/current/itc-2300/lab-asterisk-t1pstn.html
+++ b/franske-courses/current/itc-2300/lab-asterisk-t1pstn.html
@@ -573,6 +573,8 @@ You will want to think about all the different types of numbers someone could ca
 </div>
 </div>
 </div>
+<div class="openblock">
+<div class="content">
 <div class="admonitionblock note">
 <table>
 <tr>
@@ -585,13 +587,9 @@ Most states now require phone systems to allow people to dial 911 directly, with
 </tr>
 </table>
 </div>
-</li>
-</ol>
 </div>
-<div class="openblock">
-<div class="content">
-<div class="olist arabic">
-<ol class="arabic">
+</div>
+</li>
 <li>
 <p>Try placing calls out to the PSTN and make sure things are all working</p>
 <div class="ulist">
@@ -638,11 +636,8 @@ Most states now require phone systems to allow people to dial 911 directly, with
 </li>
 <li>
 <p>Find another pod who has calling out to the PSTN working over their T1 and try placing calls from each pod to the other pod to verify incoming PSTN calls are working.</p>
-</li>
-</ol>
-</div>
-</div>
-</div>
+<div class="openblock">
+<div class="content">
 <div class="admonitionblock important">
 <table>
 <tr>
@@ -655,11 +650,16 @@ In our lab the simulated SIP and T1 PSTN are separate PSTN networks and you cann
 </tr>
 </table>
 </div>
-<div class="openblock">
-<div class="content">
-<div class="paragraph">
-<p>== ITSP SIP PSTN Access</p>
 </div>
+</div>
+</li>
+</ol>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_itsp_sip_pstn_access"><a class="anchor" href="#_itsp_sip_pstn_access"></a>ITSP SIP PSTN Access</h2>
+<div class="sectionbody">
 <div class="paragraph">
 <p>In this activity we will configure your Asterisk server to contact the Public Switched Telephone Network (PSTN) using a SIP trunk to an Internet Telephony Service Provider (ITSP). This would normally be a service which you would pay for incoming and outgoing (termination and origination) connections to the PSTN and which you would access over your regular Internet connection. In our case you will connect to a simulated PSTN connection which will be able to call several test numbers and other pods but is not actually connected to the real PSTN.</p>
 </div>
@@ -673,11 +673,8 @@ In our lab the simulated SIP and T1 PSTN are separate PSTN networks and you cann
 </li>
 <li>
 <p>Modify your <a href="lab-asterisk-extensionsconf" class="xref page"><strong>extensions.conf</strong> file</a> to allow internal extensions to place calls out to the PSTN through the sipPSTN SIP device (which is the connection to your ITSP) if the number begins with a 9 for an outside line. If you had a working T1 SIP gateway PSTN configuration this will just involve changing which endpoint those calls are being directed to.</p>
-</li>
-</ol>
-</div>
-</div>
-</div>
+<div class="openblock">
+<div class="content">
 <div class="admonitionblock note">
 <table>
 <tr>
@@ -690,13 +687,10 @@ You will want to think about all the different types of numbers someone could ca
 </tr>
 </table>
 </div>
+</div>
+</div>
 <div class="openblock">
 <div class="content">
-<div class="paragraph">
-<p>+</p>
-</div>
-</div>
-</div>
 <div class="admonitionblock note">
 <table>
 <tr>
@@ -709,10 +703,9 @@ Most states now require phone systems to allow people to dial 911 directly, with
 </tr>
 </table>
 </div>
-<div class="openblock">
-<div class="content">
-<div class="olist arabic">
-<ol class="arabic">
+</div>
+</div>
+</li>
 <li>
 <p>Try placing calls out to the PSTN and make sure things are all working</p>
 <div class="ulist">
@@ -756,11 +749,8 @@ Most states now require phone systems to allow people to dial 911 directly, with
 </li>
 <li>
 <p>Find another pod who has calling out to the PSTN working over the ITSP and try placing calls from each pod to the other pod to verify incoming PSTN calls are working.</p>
-</li>
-</ol>
-</div>
-</div>
-</div>
+<div class="openblock">
+<div class="content">
 <div class="admonitionblock important">
 <table>
 <tr>
@@ -773,11 +763,16 @@ In our lab the simulated SIP and T1 PSTN are separate PSTN networks and you cann
 </tr>
 </table>
 </div>
-<div class="openblock">
-<div class="content">
-<div class="paragraph">
-<p>== Cleanup</p>
 </div>
+</div>
+</li>
+</ol>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_cleanup"><a class="anchor" href="#_cleanup"></a>Cleanup</h2>
+<div class="sectionbody">
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -793,12 +788,10 @@ In our lab the simulated SIP and T1 PSTN are separate PSTN networks and you cann
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-25 15:30:14 -0500<br>
+<p>Document Build Time: 2022-10-25 16:45:57 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
-</div>
-</div>
 </div>
 </div>
 </div>
