deploy: c8644affe8db130da7b29f4b09a91a7954374196

--- a/franske-courses/current/itc-2300/lab-asterisk-guiconfig.html
+++ b/franske-courses/current/itc-2300/lab-asterisk-guiconfig.html
@@ -364,7 +364,7 @@ The eth0 interface on your Asterisk server is used to connect with other pods, t
 </ul>
 </div>
 <div class="paragraph">
-<p>Asterisk Server ens224 Interface:</p>
+<p>Asterisk Server eth1 Interface:</p>
 </div>
 <div class="openblock">
 <div class="content">
@@ -721,7 +721,7 @@ In addition to setting your username and secret you also need to set the "From U
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-25 16:45:57 -0500<br>
+<p>Document Build Time: 2022-10-25 16:46:51 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
