--- a/franske-courses/current/itc-2300/assignments.html
+++ b/franske-courses/current/itc-2300/assignments.html
@@ -395,7 +395,7 @@ If you want to see what the GUI interface for Cisco DNA Center looks like you ca
 </div>
 </div>
 <div class="sect3">
-<h4 id="_model_driven_network_programmability_and_ios_xe_lab"><a class="anchor" href="#_model_driven_network_programmability_and_ios_xe_lab"></a>Model Driven Network Programmability and IOS XE Lab</h4>
+<h4 id="_model_driven_network_programmability_and_ios_xr_lab"><a class="anchor" href="#_model_driven_network_programmability_and_ios_xr_lab"></a>Model Driven Network Programmability and IOS XR Lab</h4>
 <div class="ulist">
 <ul>
 <li>
@@ -638,7 +638,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-26 20:07:55 -0500<br>
+<p>Document Build Time: 2022-10-27 16:27:58 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
