--- a/franske-courses/current/itc-2300/schedule.html
+++ b/franske-courses/current/itc-2300/schedule.html
@@ -354,7 +354,7 @@
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">9-Nov</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Model Driven Network Programmability and IOS XE Readings (see below for links)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Model Driven Network Programmability and IOS XR Readings (see below for links)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">REST API Fundamentals &amp; Network Programmability Lab (see Assignments page)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Getting Started with DevNet Lab Report, Getting Started with DevNet Discussion All Posts, REST API Fundamentals &amp; Network Programmability Discussion First Posts, Getting Started with DevNet Exam</p></td>
 <td class="tableblock halign-left valign-top"></td>
@@ -363,8 +363,8 @@
 <td class="tableblock halign-left valign-top"><p class="tableblock">16-Nov</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Getting Started with Ansible for Network Programmability Readings (see below for links)</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Model Driven Network Programmability and IOS XE Lab (see Assignments page)</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">REST APIs and Introducing Network Programmability Lab Report, REST APIs and Introducing Network Programmability All Posts, Model Driven Network Programmability and IOS XE Discussion First Posts, REST APIs and Introducing Network Programmability Exam</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Model Driven Network Programmability and IOS XR Lab (see Assignments page)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">REST APIs and Introducing Network Programmability Lab Report, REST APIs and Introducing Network Programmability All Posts, Model Driven Network Programmability and IOS XR Discussion First Posts, REST APIs and Introducing Network Programmability Exam</p></td>
 <td class="tableblock halign-left valign-top"></td>
 </tr>
 <tr>
@@ -584,9 +584,15 @@ This is an older reference and the SIP configuration shown uses sip.conf which i
 </li>
 </ul>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_network_programmability_readings"><a class="anchor" href="#_network_programmability_readings"></a>Network Programmability Readings</h3>
+<div class="paragraph">
+<p>Readings for the network programmability unit are embedded within the lab activities. See the <a href="assignments#_network_programmability_labs" class="xref page">Network Prgammability Lab Activities</a>.</p>
+</div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-26 20:07:55 -0500<br>
+<p>Document Build Time: 2022-10-27 16:27:59 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
