--- a/franske-courses/current/itc-2300/schedule.html
+++ b/franske-courses/current/itc-2300/schedule.html
@@ -568,6 +568,9 @@ This is an older reference and the SIP configuration shown uses sip.conf which i
 <p><a href="https://wiki.freepbx.org/display/FPG/Trunks+Module+-+User+Guide">FreePBX Trunks</a></p>
 </li>
 <li>
+<p><a href="https://wiki.freepbx.org/display/FPG/EPM-DPMA+for+Digium+Phones">EndPoint Manager for DPMA Phones</a></p>
+</li>
+<li>
 <p><a href="https://github.com/chan-sccp/chan-sccp/wiki/FreePBX_Installation">Chan-SCCP FreePBX Installation</a></p>
 </li>
 <li>
@@ -592,7 +595,7 @@ This is an older reference and the SIP configuration shown uses sip.conf which i
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-10-27 16:27:59 -0500<br>
+<p>Document Build Time: 2022-11-30 19:57:49 -0600<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
