--- a/franske-courses/current/itc-2516/assignments.html
+++ b/franske-courses/current/itc-2516/assignments.html
@@ -886,7 +886,7 @@ In this lab you need to start by loading a starting configuration onto your netw
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-In this lab you need to start by loading a starting configuration onto your network devices. INSERT LINK TO STARTING CONFIGS HERE!
+In this lab you need to start by loading a starting configuration onto your network devices. <a href="#lab2-16-3-2.adoc" class="xref unresolved">Click here to get the configruations you should copy and paste into your routers and switches before beginning the lab</a>.
 </td>
 </tr>
 </table>
@@ -987,7 +987,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-11-30 19:57:49 -0600<br>
+<p>Document Build Time: 2022-12-05 14:21:00 -0600<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
